--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,16 @@
 *.exe
 *.out
 *.app
+
+# Criados apos build
+bin/
+build/
+cmake/CMakeBuild/bin/pyhhi/
+outputs/
+VTM_7.1_analysis/
+
+# Outros arquivos
+*.yuv
+*.str
+*.csv
+*.txt
